pre gif flow